--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 build-backend = "hatchling.build"
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-requirements-txt"]
 
 [project]
 authors = [
@@ -12,19 +12,18 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 description = "Simplifies arranging text fragments with multiple speakers and processing it with coqui.ai TTS"
+dynamic = ["dependencies"]
 name = "tts_arranger"
 readme = "README.md"
 requires-python = ">=3.7"
-version = "0.0.8"
-
-dependencies = [
-  "numpy>=1.22.4",
-  "pydub>=0.25.1",
-  "scipy>=1.9.0",
-  "TTS>=0.13.0",
-  "num2words>=0.5.11",
-]
+version = "0.0.9"
 
 [project.urls]
 "Bug Tracker" = "https://github.com/knochenhans/tts_arranger/issues"
 "Homepage" = "https://github.com/knochenhans/tts_arranger"
+
+[tool.hatch.build]
+exclude = [
+  ".mypy_cache",
+  ".vscode",
+]
