--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-beautifulsoup4==4.12.2
-EbookLib==0.18
-ffmpeg==1.4
-ffmpeg_python==0.2.0
-num2words==0.5.11
-pathvalidate==2.5.2
-Pillow==9.5.0
-python_dateutil==2.8.2
-requests==2.28.2
-scipy==1.9.0
-srt==3.5.2
-TTS==0.13.3
+beautifulsoup4>=4.12.2
+EbookLib>=0.18
+ffmpeg-python>=0.2.0
+num2words>=0.5.11
+pathvalidate>=2.5.2
+Pillow>=9.5.0
+python_dateutil>=2.8.2
+requests>=2.28.2
+scipy>=1.9.0
+srt>=3.5.2
+TTS>=0.13.3
