--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 beautifulsoup4>=4.12.2
 EbookLib>=0.18
+ffmpeg>=1.4
 ffmpeg-python>=0.2.0
+mammoth>=1.5.1
 num2words>=0.5.11
 pathvalidate>=2.5.2
 Pillow>=9.5.0
